tests/build/cases/widget/when_property_does_not_exist2.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `__p_is_pressed`
 --> cases/widget/when_property_does_not_exist2.rs:6:19
  |
6 |         when *#is_pressed { }
  |                   ^^^^^^^^^^ use of undeclared crate or module `__p_is_pressed`

error[E0433]: failed to resolve: use of undeclared crate or module `is_pressed`
 --> cases/widget/when_property_does_not_exist2.rs:6:19
  |
6 |         when *#is_pressed { }
  |                   ^^^^^^^^^^ use of undeclared crate or module `is_pressed`
